<resources>
    <string name="app_name">PlanMaster</string>

    <string name="common_edit">Edit</string>
    <string name="common_save">Save</string>
    <string name="common_done">Done</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_delete">Delete</string>
    <string name="common_enroll">Enroll</string>
    <string name="common_unenroll">Un-enroll</string>
    <string name="common_description">Description</string>
    <string name="common_createdby"><u>by {name}</u></string>

    <string name="shell_drawer_open">Open left nav</string>
    <string name="shell_drawer_close">Close left nav</string>
    <string name="shell_loading">Please wait</string>
    <string name="shell_error_reload_btn_text">Reload</string>
    <string name="shell_error_emoticon">:(</string>
    <string name="shell_error_connection">Failed to connect to server. Please make sure you are connected to internet.</string>
    <string name="shell_error_unknown">Something went wrong.</string>
    <string name="shell_error_unauthorized">You don\'t have permission to do the requested operation</string>

    <string name="prompt_completetask_title">Mark task as complete?</string>
    <string name="prompt_completetask_msg">This will remove the task from your list.</string>
    <string name="prompt_completeocc_title">Mark occurrence as complete?</string>
    <string name="prompt_completeocc_msg">This will remove just this occurrence from your list. The next tasks in the series will remain.</string>
    <string name="prompt_completeseries_title">Mark series as complete?</string>
    <string name="prompt_completeseries_msg">This will remove the whole series from your list and it will not be available to view anymore. This action cannot be undone.</string>
    <string name="prompt_postponetask_title">Postpone task?</string>
    <string name="prompt_postponetask_msg">This will move the task to the next day.</string>
    <string name="prompt_deleteplan_title">Delete plan draft?</string>
    <string name="prompt_deleteplan_msg">This draft will not be available to view anymore and this action cannot be undone.</string>
    <string name="prompt_submitplan_title">Submit plan?</string>
    <string name="prompt_submitplan_msg">This will allow you to enroll to this plan, but you will not be able to delete this plan, or modify the tasks in this plan. However you will still be able to update the plan name and description. This action cannot be undone.</string>
    <string name="prompt_publishplan_title">Make plan public?</string>
    <string name="prompt_publishplan_msg">This will make the plan available for all users to enroll. This action cannot be undone, </string>
    <string name="prompt_enrollplan_title">Enroll to this plan?</string>
    <string name="prompt_enrollplan_msg">This will be added to your daily tasks starting from today.</string>
    <string name="prompt_unenrollplan_title">Un-enroll from this plan?</string>
    <string name="prompt_unenrollplan_msg">You can enroll back later, but you will lose the completion record.</string>
    <string name="prompt_logout_title">Logout?</string>
    <string name="prompt_logout_msg">Log out from this device?</string>

    <string name="menu_userhello">Hello {name}!</string>
    <string name="menu_tasks">Today</string>
    <string name="menu_tasks_title">Tasks</string>
    <string name="menu_enrolled_plans">Enrolled plans</string>
    <string name="menu_browse_plans">Browse plans</string>
    <string name="menu_created_plans">Created plans</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>

    <string name="dayspicker_sun">S</string>
    <string name="dayspicker_mon">M</string>
    <string name="dayspicker_tue">T</string>
    <string name="dayspicker_wed">W</string>
    <string name="dayspicker_thu">T</string>
    <string name="dayspicker_fri">F</string>
    <string name="dayspicker_sat">S</string>

    <string name="login_intro_text">Welcome! Please login to continue.</string>
    <string name="login_facebook_app_id">1323560431073064</string>
    <string name="login_facebook_login_text">Log in with Facebook</string>
    <string name="login_error_login_failed">Login failed</string>
    <string name="login_error_invalid_login">Invalid login</string>

    <string name="tasks_add_hint">Add new task</string>
    <!-- TODO: when we're ready to bring back plans, switch the tasks_null string below -->
    <!-- <string name="tasks_null">No task found for current date. Use the text field below to add a task or go to Menu > Browse Plans to enroll on a plan.</string>-->
    <string name="tasks_null">No task found for current date. Use the text field below to add a task.</string>

    <string name="taskcontrol_postpone_alttext">Postpone</string>
    <string name="taskcontrol_complete_alttext">Complete</string>
    <string name="taskcontrol_plantask">Plan#{planId}: {planTaskName}</string>

    <string name="taskdetail_title">Task detail</string>
    <string name="taskdetail_complete_btn_text">Mark as completed</string>
    <string name="taskdetail_completeocc_btn_text">Mark occurrence as completed</string>
    <string name="taskdetail_completeser_btn_text">Mark series as completed</string>

    <string name="taskcreate_title">Create task</string>
    <string name="taskupdate_title">Update task</string>
    <string name="taskupdate_taskname_hint">Task name</string>
    <string name="taskupdate_taskdate_hint">Task date</string>

    <string name="taskrecurrence_label">Repeat: </string>
    <string name="taskrecurrence_none">None</string>
    <string name="taskrecurrence_daily">Daily</string>
    <string name="taskrecurrence_weekly">Weekly</string>
    <string name="taskrecurrence_monthlydatebased">Monthly, date based</string>
    <string name="taskrecurrence_monthlyweekbased">Monthly, week based</string>
    <string name="taskrecurrence_yearly">Yearly</string>
    <string name="taskrecurrence_days_label">on day(s):</string>
    <string name="taskrecurrence_days_sunday">Sunday</string>
    <string name="taskrecurrence_days_monday">Monday</string>
    <string name="taskrecurrence_days_tuesday">Tuesday</string>
    <string name="taskrecurrence_days_wednesday">Wednesday</string>
    <string name="taskrecurrence_days_thursday">Thursday</string>
    <string name="taskrecurrence_days_friday">Friday</string>
    <string name="taskrecurrence_days_saturday">Saturday</string>
    <string name="taskrecurrence_interval_label">every:</string>
    <string name="taskrecurrence_interval_suffix_days">day(s)</string>
    <string name="taskrecurrence_interval_suffix_weeks">week(s)</string>
    <string name="taskrecurrence_interval_suffix_months">month(s)</string>
    <string name="taskrecurrence_interval_suffix_years">year(s)</string>
    <string name="taskrecurrence_start_label">from:</string>
    <string name="taskrecurrence_end_label">until:</string>
    <string name="taskrecurrence_end_forever">Forever</string>
    <string name="taskrecurrence_end_date">Date</string>

    <string name="plans_enrolled_null">You have not enrolled to any plan. Go to "Browse plans" on the side menu to get started.</string>
    <string name="plans_created_null">You have not created any plan. Click the add button below to create one.</string>
    <string name="plans_browse_null">No plan found with the given criteria.</string>
    <string name="plans_user_null">This user has not authored any plan.</string>
    <string name="plans_user_title">User profile</string>
    <string name="plans_user_label">Authored plans:</string>
    <string name="plans_sortby">Sort by:</string>
    <string name="plans_searchhint">What plan are you looking for?</string>
    <string name="plans_sort_createdtime">Date added</string>
    <string name="plans_sort_name">Name</string>
    <string name="plans_sort_ownerid">Author</string>

    <string name="plancontrol_img_alttext">Plan image</string>
    <string name="plantaskcontrol_label_format">Day #{day}</string>

    <string name="plandetail_title">Plan detail</string>
    <string name="plandetail_id">Plan #{id}</string>
    <string name="plandetail_draft">DRAFT</string>
    <string name="plandetail_private">PRIVATE</string>
    <string name="plandetail_submit">Submit draft</string>
    <string name="plandetail_publish">Make public</string>

    <string name="plancreate_title">Create plan</string>
    <string name="planupdate_title">Update plan</string>
    <string name="planupdate_name_label">Plan name</string>
    <string name="planupdate_name_hint">Name for your plan</string>
    <string name="planupdate_desc_label">Plan description</string>
    <string name="planupdate_desc_hint">Short description of your plan</string>
    <string name="planupdate_schedule_label">Plan schedule</string>
    <string name="planupdate_add_label">Add new task</string>

    <string name="plantaskupdate_name_label">Task name</string>
    <string name="plantaskupdate_name_hint">Name for this task</string>
    <string name="plantaskupdate_desc_label">Task description</string>
    <string name="plantaskupdate_desc_hint">Short description for this task</string>

    <string name="plantaskdetail_day">This is day {day} task in plan:</string>
    <string name="plantaskdetail_planlink"><u>Plan#{planId}. {planName}</u></string>
    <string name="plantaskdetail_completedisabled">You must complete the previous tasks in the plan before you can complete this task.</string>
    <string name="plantaskdetail_complete">Mark this task as complete</string>
    <string name="plantaskdetail_enrollstatus_ontrack">You are on track!</string>
    <string name="plantaskdetail_enrollstatus_missed">You missed {numdays} days in this plan.</string>
    <string name="plantaskdetail_shifttasksbtn">Click here to shift tasks forward.</string>
</resources>
