<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_planupdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planupdate_name_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/planupdate_name_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/planupdate_desc_label"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="500"
                android:textSize="16sp"
                android:hint="@string/planupdate_desc_hint"
                android:inputType="textMultiLine"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/planupdate_save_btn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/common_save"
                    android:textColor="@color/cardview_light_background" />

                <Button
                    android:id="@+id/planupdate_cancel_btn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/common_cancel"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

