<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_plantaskupdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plantaskupdate_name_label"/>
                <EditText
                    android:id="@+id/plantaskupdate_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/plantaskupdate_name_hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plantaskupdate_desc_label"/>
                <EditText
                    android:id="@+id/plantaskupdate_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="500"
                    android:textSize="16sp"
                    android:hint="@string/plantaskupdate_desc_hint"
                    android:inputType="textMultiLine"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottomoverlaybg"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center"
        android:elevation="20dp">

        <Button
            style="?android:buttonStyle"
            android:id="@+id/plantaskupdate_delete_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@color/red"
            android:text="@string/common_delete"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            style="?android:buttonStyle"
            android:id="@+id/plantaskupdate_done_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/green"
            android:text="@string/common_done"
            android:textColor="@color/white" />

        <Button
            style="?android:buttonStyle"
            android:id="@+id/plantaskupdate_cancel_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/common_cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>

