<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_plandetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/plandetail_private_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/plandetail_private"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/plandetail_draft_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:text="@string/plandetail_draft"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/plandetail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:text="test"/>

            <TextView
                android:id="@+id/plandetail_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/common_createdby"/>

            <TextView
                android:id="@+id/plandetail_enrollstatustext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/plantaskdetail_enrollstatus_missed"/>

            <TextView
                android:id="@+id/plandetail_shifttasksbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/plantaskdetail_shifttasksbtn"/>


            <LinearLayout
                android:id="@+id/plandetail_descparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/common_description"/>

                <TextView
                    android:id="@+id/plandetail_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="test"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/plandetail_itemsparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/planupdate_schedule_label"/>
                <LinearLayout
                    android:id="@+id/plandetail_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:id="@+id/plandetail_btnbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/overlaybgbottom"
        android:elevation="20dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:gravity="center">

        <Button
            style="?android:buttonStyle"
            android:id="@+id/plandetail_enroll_btn"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/common_enroll"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="gone" />
        <Button
            style="?android:buttonStyle"
            android:id="@+id/plandetail_unenroll_btn"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/red"
            android:text="@string/common_unenroll"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="gone" />
        <Button
            style="?android:buttonStyle"
            android:id="@+id/plandetail_submit_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/plandetail_submit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="gone"/>
        <Button
            style="?android:buttonStyle"
            android:id="@+id/plandetail_publish_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/plandetail_publish"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            style="?android:buttonStyle"
            android:id="@+id/plandetail_edit_btn"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/common_edit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="visible"/>
        <Button
            style="?android:buttonStyle"
            android:id="@+id/plandetail_delete_btn"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/red"
            android:text="@string/common_delete"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:visibility="visible"/>

    </LinearLayout>
</RelativeLayout>

