<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_plantaskdetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            
            <TextView
                android:id="@+id/plantaskdetail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="Plan Task Name"/>

            <LinearLayout
                android:id="@+id/plantaskdetail_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:text="@string/common_description"/>

                <TextView
                    android:id="@+id/plantaskdetail_desctext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="test"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/plantaskdetail_enrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plantaskdetail_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/plantaskdetail_day"/>

                <TextView
                    android:id="@+id/plantaskdetail_planlink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/plantaskdetail_planlink"/>

                <TextView
                    android:id="@+id/plantaskdetail_enrollstatustext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/plantaskdetail_enrollstatus_missed"/>

                <TextView
                    android:id="@+id/plantaskdetail_shifttasksbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/plantaskdetail_shifttasksbtn"/>

                <LinearLayout
                    android:id="@+id/plantaskdetail_completedisabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:text="@string/plantaskdetail_completedisabled"/>
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:background="@color/gray"
                        android:textColor="@color/lightgray"
                        android:text="@string/plantaskdetail_complete"
                        android:textAllCaps="false" />
                </LinearLayout>

                <Button
                    android:id="@+id/plantaskdetail_completebtn"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/plantaskdetail_complete"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

